src/less/alerts.less
//------------------------//
// Alert                  //
//------------------------//

.backdrop-alert {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 26;
  background: transparent; // transparent fallback
  background-color: rgba(0, 0, 0, .25);

  &.fadeout {
    opacity: 0;
    -webkit-transition: opacity .45s linear;
            transition: opacity .45s linear;
  }
}

.alert {
  width: 400px;
  height: auto;
  max-height: 65%;

  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  z-index: 28;


  //overflow: auto;

  background-color: #fff;
  /*
  -webkit-transition: opacity 250ms;
          transition: opacity 250ms;*/



  // Active alert
  &.active {
    opacity: 1;
    -webkit-transition: -webkit-transform 0.1s, opacity 440ms .1s;
            transition:         transform 0.1s, opacity 440ms .1s;
    -webkit-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);

  }

  &.close {
	-webkit-animation: closeAlert .3s ease-out;
	        animation: closeAlert .3s ease-out;
  }

  & .content {
  	position: relative;
  	height: auto;
  	max-height: 155px; // display max 3 items for lists

    overflow-y: auto;
    overflow-x: hidden;

    & .row {
    	border-top: 1px solid #e8e8e8;
    }

    & .row, & a {
    	margin-bottom: 0;
    }

    & a {
    	width: 100%;
    	height: 48px;
    	line-height: 48px;
    	display: inline-block;
    	color: #0078d3;

    	&:active {
    		color: #008af2;
    	}
    }
  }

  & .content-padded {
  	margin-bottom: 0;
  }
}

@-webkit-keyframes closeAlert {
	0% {
		opacity: 1;
		-webkit-transform: translate3d(0, 0, 0);
		        transform: translate3d(0, 0, 0);
	}

	100% {
		opacity: 0;
		-webkit-transform: translate3d(0, -100%, 0);
		        transform: translate3d(0, -100%, 0);
	}
}

@keyframes closeAlert {
	0% {
		opacity: 1;
		-webkit-transform: translate3d(0, 0, 0);
		        transform: translate3d(0, 0, 0);
	}

	100% {
		opacity: 0;
		-webkit-transform: translate3d(0, -100%, 0);
		        transform: translate3d(0, -100%, 0);
	}
}

